--- a/index.html
+++ b/index.html
@@ -11,6 +11,27 @@
 </head>
 <body>
 <div class="content">
+    <div class="preloader active">
+        <svg id="Слой_1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+             viewBox="-2 0 262 256" xml:space="preserve">
+            <g>
+	<polygon class="st0" points="247.1,118.3 241.4,125.1 224.3,145.4 224.2,145.6 223.1,145.6 197,145.6 188.5,145.6 187.3,145.6
+		170.1,125 169.8,124.7 164.5,118.3 " fill="#1f2389"/>
+                <polygon class="st0" points="255.2,61.5 249.8,67.9 239.4,80.3 232.3,88.7 139.6,88.7 132.6,80.3 116.7,61.4 140.5,61.4
+		148.4,61.4 152.5,61.4 167.9,61.4 184.1,61.4 188,61.4 195.1,61.4 219.6,61.4 223.6,61.4 249.8,61.5 "
+                         fill="#1f2389"/>
+                <polygon class="st1" points="233.2,200.2 197.5,200.2 197,199.5 187.9,188.7 174.6,172.9 170.1,167.5 169.8,167.1 152.3,146.3
+		151.7,145.5 142.4,134.5 134.5,125.1 128.9,118.3 116.7,103.8 115.2,105.6 104.5,118.3 99,125 88,138.1 81.7,145.5 81.1,146.3
+		63.3,167.5 60.6,170.7 58.7,172.9 45.5,188.6 35.8,200.2 0.2,200.2 9.8,188.7 23.1,172.9 27.7,167.4 33.3,160.8 45.5,146.3
+		46.1,145.5 60.6,128.2 63.3,125 68.9,118.3 81.2,103.7 88,95.6 91.8,91 98.9,82.6 114.8,63.7 115.2,63.2 116.7,61.4 118.6,63.7
+		134.5,82.6 141.6,91 142.4,92.1 152.3,103.8 164.5,118.3 169.8,124.7 170.1,125 187.3,145.6 187.9,146.3 197,157.1 205.8,167.5
+		210.3,172.9 223.5,188.7 224.3,189.6 	"/>
+                <polygon class="st2"
+                         points="158.5,172.9 145.3,188.7 135.6,200.2 64.4,200.2 74,188.7 80.9,180.5 87.3,172.9 "
+                         fill="#1f2389"/>
+</g>
+</svg>
+    </div>
     <div class="container">
         <img class="background" style="margin-top: -25px" src="./assets/images/bg1.svg" alt="">
         <header>
@@ -29,10 +50,10 @@
                     <ul>
                         <li class="link"><a href="#">Главная</a></li>
                         <li class="link"><a href="#service">Услуги</a></li>
-                        <li class="link"><a href="#">Отрасли</a></li>
-                        <li class="link"><a href="#">Этапы</a></li>
+                        <li class="link"><a href="#industry">Отрасли</a></li>
+                        <li class="link"><a href="#stage">Этапы</a></li>
                         <li class="link"><a href="#">Контакты</a></li>
-                        <li class="link btn"><a href="#">Начать проект</a></li>
+                        <li class="link btn"><a href="#building">Начать проект</a></li>
                     </ul>
                 </div>
             </nav>
