--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./assets/styles/style.css">
+    <link rel="stylesheet" href="./assets/styles/@media-1000.css">
+    <link rel="stylesheet" href="./assets/styles/@media-768.css">
+    <link rel="stylesheet" href="./assets/styles/@media-480.css">
+    <link rel="stylesheet" href="./assets/styles/@media-320.css">
     <script src="./assets/scripts/scrips.js" defer></script>
     <title>Айти Финанс</title>
 </head>
