animated first background images

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="./assets/scripts/scrips.js" defer></script>
     <title>Айти Финанс</title>
 </head>
-<body>
+<body style="overflow-x:hidden">
 <div class="content">
     <div class="preloader active">
         <svg id="Слой_1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
@@ -38,6 +38,7 @@
     </div>
     <div class="container">
         <img class="background" style="margin-top: -25px" src="./assets/images/bg1.svg" alt="">
+        <img class="background bg_anim" style="margin-top: -25px" src="./assets/images/bg_anim.png" alt="">
         <header>
             <nav>
                 <a href="./" class="logo">
