--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./assets/styles/@media-768.css">
     <link rel="stylesheet" href="./assets/styles/@media-480.css">
     <link rel="stylesheet" href="./assets/styles/@media-320.css">
+    <script src="./assets/scripts/particles.js" defer></script>
     <script src="./assets/scripts/scrips.js" defer></script>
     <title>Айти Финанс</title>
 </head>
@@ -37,8 +38,9 @@
 </svg>
     </div>
     <div class="container">
-        <img class="background" style="margin-top: -25px" src="./assets/images/bg1.svg" alt="">
-        <img class="background bg_anim" style="margin-top: -25px" src="./assets/images/bg_anim.png" alt="">
+<!--        <img class="background" style="margin-top: -25px" src="./assets/images/bg1.svg" alt="">-->
+<!--        <img class="background bg_anim" style="margin-top: -25px" src="./assets/images/bg_anim.png" alt="">-->
+        <div id="particles-js"></div>
         <header>
             <nav>
                 <a href="./" class="logo">
@@ -289,7 +291,7 @@
                 <span>проектирование</span>
             </button>
             <div class="stage_info">
-                мы создадим для вас будущую модель и архитектуру проекта, и вы будете видеть за что именно вы платите
+                мы создадим для вас будущую модель<br>и архитектуру проекта, и вы будете видеть за что именно вы платите
             </div>
             <button class="stage_btn">
                 <div>3</div>
@@ -310,10 +312,10 @@
                 <span>эксплуатация проекта</span>
             </button>
             <div class="stage_info">
-                завершающий этап, на котором вы уже реализуете свой проект, а мы осуществляем его тех. поддержку
+                завершающий этап, на котором вы уже реализуете свой проект, а мы осуществляем его тех.поддержку
             </div>
         </div>
-        <img class="background" src="./assets/images/bg2.svg" alt="">
+<!--        <img class="background" src="./assets/images/bg2.svg" alt="">-->
         <div class="technology_block">
             <h3 class="title" id="technology">технологии</h3>
             <span class="main_description">чтобы реализовать ваш проект мы можем вести разработку в следующих направлениях</span>
