--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <span class="service_name">создание сложных<br>it-решений</span>
                 </div>
             </div>
-            <a href="#" class="btn">узнать стоимость</a>
+            <a href="#building_link" class="btn">узнать стоимость</a>
         </div>
         <div class="industry_block">
             <h3 class="title" id="industry">отрасли</h3>
@@ -329,7 +329,7 @@
                 <span class="technology_text">Разработка CRM-систем</span>
             </div>
         </div>
-        <div class="building_block">
+        <div class="building_block" id="building_link">
             <h3 class="title build_active_title" id="building">выберите тип<br>вашего проекта</h3>
             <h3 class="title">на какой платформе<br>нужен проект?</h3>
             <h3 class="title">на каком этапе<br>ваш проект сейчас?</h3>
