--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <span class="service_name">создание сложных<br>it-решений</span>
                 </div>
             </div>
-            <a href="#building_link" class="btn">узнать стоимость</a>
+            <a href="#building" class="btn">узнать стоимость</a>
         </div>
         <div class="industry_block">
             <h3 class="title" id="industry">отрасли</h3>
@@ -320,16 +320,31 @@
             <h3 class="title" id="technology">технологии</h3>
             <span class="main_description">чтобы реализовать ваш проект мы можем вести разработку в следующих направлениях</span>
             <div class="technology_items">
-                <span class="technology_text">разработка программ</span>
-                <span class="technology_text">разработка и вёрстка сайтов</span>
+                <input type="checkbox" id="technology_1" style="display: none">
+                <input type="checkbox" id="technology_2" style="display: none">
+                <input type="checkbox" id="technology_3" style="display: none">
+                <label for="technology_1" class="technology_text technology_1">разработка программ</label>
+                <p class="technology_text t_1">javascript</p>
+                <p class="technology_text t_1">php</p>
+                <p class="technology_text t_1">go</p>
+                <p class="technology_text t_1">python</p>
+                <p class="technology_text t_1">mysqp</p>
+                <label for="technology_2" class="technology_text technology_2">разработка и вёрстка сайтов</label>
+                <p class="technology_text t_2">html 5</p>
+                <p class="technology_text t_2">css 3</p>
+                <p class="technology_text t_2">php 7 и меньше</p>
                 <span class="technology_text">CMS (простые)</span>
                 <span class="technology_text">Мини-приложения вк,ок, тг</span>
                 <span class="technology_text">Боты для мессенджеров</span>
-                <span class="technology_text">Работа в графических программах</span>
+                <label for="technology_3" class="technology_text technology_3">Работа в графических программах</label>
+                <p class="technology_text t_3">adobe photoshop</p>
+                <p class="technology_text t_3">adobe illustrator</p>
+                <p class="technology_text t_3">figma</p>
+                <p class="technology_text t_3">sony vegas</p>
                 <span class="technology_text">Разработка CRM-систем</span>
             </div>
         </div>
-        <div class="building_block" id="building_link">
+        <div class="building_block">
             <h3 class="title build_active_title" id="building">выберите тип<br>вашего проекта</h3>
             <h3 class="title">на какой платформе<br>нужен проект?</h3>
             <h3 class="title">на каком этапе<br>ваш проект сейчас?</h3>
