--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="robots" content="index,follow">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
     <link rel="stylesheet" href="./assets/styles/style.css">
     <script src="./assets/scripts/particles.min.js" defer></script>
     <script src="./assets/scripts/scrips.js" defer></script>
@@ -34,8 +36,6 @@
 </svg>
     </div>
     <div class="container">
-<!--        <img class="background" style="margin-top: -25px" src="./assets/images/bg1.svg" alt="">-->
-<!--        <img class="background bg_anim" style="margin-top: -25px" src="./assets/images/bg_anim.png" alt="">-->
         <div id="particles-js"></div>
         <header>
             <nav>
@@ -120,7 +120,7 @@
                 <div class="industry_cards">
                     <div class="industry_card active">
                         <svg class="industry_card_icon" width="38" height="48" viewBox="0 0 38 48" xmlns="http://www.w3.org/2000/svg" stroke="black" fill="none">
-                            <path id="shield-check" d="M11.7143 24L19 28.8889L26.2857 14.2222M19 2C17.0776 2 7.54626 5.06344 3.6569 6.34035C2.6631 6.66663 2 7.59858 2 8.65074V29.9884C2 30.6268 2.24323 31.2349 2.68919 31.6887C5.60692 34.6582 16.8893 46 19 46C21.1107 46 32.3931 34.6582 35.3108 31.6887C35.7568 31.2349 36 30.6268 36 29.9884V8.65074C36 7.59858 35.3369 6.66663 34.3431 6.34035C30.4537 5.06345 20.9224 2 19 2Z" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M11.7143 24L19 28.8889L26.2857 14.2222M19 2C17.0776 2 7.54626 5.06344 3.6569 6.34035C2.6631 6.66663 2 7.59858 2 8.65074V29.9884C2 30.6268 2.24323 31.2349 2.68919 31.6887C5.60692 34.6582 16.8893 46 19 46C21.1107 46 32.3931 34.6582 35.3108 31.6887C35.7568 31.2349 36 30.6268 36 29.9884V8.65074C36 7.59858 35.3369 6.66663 34.3431 6.34035C30.4537 5.06345 20.9224 2 19 2Z" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
                         <div class="industry_card_name">страхование</div>
                     </div>
@@ -288,7 +288,7 @@
                 <div class="industry_cards_mobile">
                     <div class="industry_card_mobile">
                         <svg class="industry_card_icon_mobile icon_s" width="38" height="48" viewBox="0 0 38 48" xmlns="http://www.w3.org/2000/svg" stroke="black" fill="none">
-                            <path id="shield-check" d="M11.7143 24L19 28.8889L26.2857 14.2222M19 2C17.0776 2 7.54626 5.06344 3.6569 6.34035C2.6631 6.66663 2 7.59858 2 8.65074V29.9884C2 30.6268 2.24323 31.2349 2.68919 31.6887C5.60692 34.6582 16.8893 46 19 46C21.1107 46 32.3931 34.6582 35.3108 31.6887C35.7568 31.2349 36 30.6268 36 29.9884V8.65074C36 7.59858 35.3369 6.66663 34.3431 6.34035C30.4537 5.06345 20.9224 2 19 2Z" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M11.7143 24L19 28.8889L26.2857 14.2222M19 2C17.0776 2 7.54626 5.06344 3.6569 6.34035C2.6631 6.66663 2 7.59858 2 8.65074V29.9884C2 30.6268 2.24323 31.2349 2.68919 31.6887C5.60692 34.6582 16.8893 46 19 46C21.1107 46 32.3931 34.6582 35.3108 31.6887C35.7568 31.2349 36 30.6268 36 29.9884V8.65074C36 7.59858 35.3369 6.66663 34.3431 6.34035C30.4537 5.06345 20.9224 2 19 2Z" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
                         <div class="industry_card_name_mobile">страхование</div>
                         <ul class="industry_info_list_mobile">
@@ -431,42 +431,41 @@
             <h3 class="title" id="stage">этапы</h3>
             <span class="main_description">Чтобы выполнить ваш проект качественно, он должен пройти следующие этапы</span>
             <button class="stage_btn">
-                <div>1</div>
+                <p>1</p>
                 <span>Анализ задач и составление тз</span>
             </button>
             <div class="stage_info">
                 на этом этапе мы точно будем знать, что именно вам нужно
             </div>
             <button class="stage_btn">
-                <div>2</div>
+                <p>2</p>
                 <span>проектирование</span>
             </button>
             <div class="stage_info">
                 мы создадим для вас будущую модель<br>и архитектуру проекта, и вы будете видеть за что именно вы платите
             </div>
             <button class="stage_btn">
-                <div>3</div>
+                <p>3</p>
                 <span>Разработка проекта</span>
             </button>
             <div class="stage_info">
                 акт творения вашего проекта и показатель нашего профессионализма
             </div>
             <button class="stage_btn">
-                <div>4</div>
+                <p>4</p>
                 <span>внедрение</span>
             </button>
             <div class="stage_info">
                 этап тестирования готового проекта на рынке
             </div>
             <button class="stage_btn">
-                <div>5</div>
+                <p>5</p>
                 <span>эксплуатация проекта</span>
             </button>
             <div class="stage_info">
                 завершающий этап, на котором вы уже реализуете свой проект, а мы осуществляем его тех.поддержку
             </div>
         </div>
-<!--        <img class="background" src="./assets/images/bg2.svg" alt="">-->
         <div class="technology_block">
             <h3 class="title" id="technology">технологии</h3>
             <span class="main_description">чтобы реализовать ваш проект мы можем вести разработку в следующих направлениях</span>
