--- a/index.html
+++ b/index.html
@@ -431,35 +431,35 @@
             <h3 class="title" id="stage">этапы</h3>
             <span class="main_description">Чтобы выполнить ваш проект качественно, он должен пройти следующие этапы</span>
             <button class="stage_btn">
-                <p>1</p>
+                <span class="stage_num">1</span>
                 <span>Анализ задач и составление тз</span>
             </button>
             <div class="stage_info">
                 на этом этапе мы точно будем знать, что именно вам нужно
             </div>
             <button class="stage_btn">
-                <p>2</p>
+                <span class="stage_num">2</span>
                 <span>проектирование</span>
             </button>
             <div class="stage_info">
                 мы создадим для вас будущую модель<br>и архитектуру проекта, и вы будете видеть за что именно вы платите
             </div>
             <button class="stage_btn">
-                <p>3</p>
+                <span class="stage_num">3</span>
                 <span>Разработка проекта</span>
             </button>
             <div class="stage_info">
                 акт творения вашего проекта и показатель нашего профессионализма
             </div>
             <button class="stage_btn">
-                <p>4</p>
+                <span class="stage_num">4</span>
                 <span>внедрение</span>
             </button>
             <div class="stage_info">
                 этап тестирования готового проекта на рынке
             </div>
             <button class="stage_btn">
-                <p>5</p>
+                <span class="stage_num">5</span>
                 <span>эксплуатация проекта</span>
             </button>
             <div class="stage_info">
