--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
                 </div>
             </div>
             <div class="building_items final">
-                <form enctype="multipart/form-data">
+                <form enctype="multipart/form-data" id="feedback-form">
                     <div class="loader">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" height="75px" width="75px">
                             <path d="M304 48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zm0 416a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM48 304a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm464-48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM142.9 437A48 48 0 1 0 75 369.1 48 48 0 1 0 142.9 437zm0-294.2A48 48 0 1 0 75 75a48 48 0 1 0 67.9 67.9zM369.1 437A48 48 0 1 0 437 369.1 48 48 0 1 0 369.1 437z"/>
@@ -667,6 +667,35 @@
                     </label>
                     <button>начать проект</button>
                 </form>
+                <script>
+                    const feedbackForm = document.getElementById("feedback-form");
+
+                    const loaderElem = document.querySelector(".loader");
+
+                    feedbackForm.onsubmit = async (e) => {
+                        loaderElem.classList.add("active");
+                        feedbackForm.disabled = true;
+
+                        try {
+                            e.preventDefault();
+                            console.log(feedbackForm, new FormData(feedbackForm))
+
+                            let response = await fetch('/feedback', {
+                                method: 'POST',
+                                body: new FormData(feedbackForm)
+                            });
+
+                            let result = await response.json();
+
+                            alert(result?.data?.message || result.message || result.error_text);
+                        } catch (e) {
+                            alert("Не удалось отправить Вашу заявку. Пожалуйста, свяжитесь с нами по телефону или по почте");
+                        } finally {
+                            loaderElem.classList.remove("active");
+                            feedbackForm.disabled = false;
+                        }
+                    };
+                </script>
             </div>
         </div>
     </div>
