--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="./assets/scripts/particles.min.js" defer></script>
     <script src="./assets/scripts/scrips.js" defer></script>
     <title>Айти Финанс</title>
-    <link rel="shortcut icon" href="./assets/images/logo.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/images/favicon.svg" type="image/x-icon">
 </head>
 <body style="overflow-x:hidden">
 <div class="content">
@@ -645,7 +645,7 @@
                     </div>
                     <label class="name">
                         имя
-                        <input class="input" type="text" name="user_name" required placeholder="имя фамилия">
+                        <input class="input" type="text" name="user_name" required placeholder="ИМЯ ФАМИЛИЯ">
                     </label>
                     <label class="phone">
                         Номер телефона
@@ -653,11 +653,11 @@
                     </label>
                     <label class="email">
                         Электронная почта
-                        <input class="input" type="email" name="user_email" placeholder="рабочий email">
+                        <input class="input" type="email" name="user_email" placeholder="РАБОЧИЙ EMAIL">
                     </label>
                     <label class="text">
                         комментарий
-                        <textarea class="input" name="user_text" cols="30" rows="2" max="800" placeholder="сроки запуска, бюджет, требования, ваши пожелания"></textarea>
+                        <textarea class="input" name="user_text" cols="30" rows="2" max="800" placeholder="СРОКИ ЗАПУСКА, БЮДЖЕТ, ТРЕБОВАНИЯ, ВАШИ ПОЖЕЛАНИЯ"></textarea>
                     </label>
                     <label class="file">
                         <span class="file_title">прикрепить файл</span>
