--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body style="overflow-x:hidden">
 <div class="content">
-    <div class="preloader active">
+    <div class="preloader">
         <svg id="Слой_1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
              viewBox="-2 0 262 256" xml:space="preserve">
             <g>
