--- a/index.html
+++ b/index.html
@@ -15,7 +15,48 @@
     <link rel="shortcut icon" href="./assets/images/favicon.svg" type="image/x-icon">
 </head>
 <body style="overflow-x:hidden">
-<div class="content">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FL2HPSRQ31"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+
+        gtag('config', 'G-FL2HPSRQ31');
+    </script>
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+        (function (m, e, t, r, i, k, a) {
+            m[i] = m[i] || function () {
+                (m[i].a = m[i].a || []).push(arguments)
+            };
+            m[i].l = 1 * new Date();
+            for (var j = 0; j < document.scripts.length; j++) {
+                if (document.scripts[j].src === r) {
+                    return;
+                }
+            }
+            k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+        })
+        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+        ym(96824466, "init", {
+            clickmap: true,
+            trackLinks: true,
+            accurateTrackBounce: true,
+            webvisor: true
+        });
+    </script>
+    <noscript>
+        <div><img alt="" src="https://mc.yandex.ru/watch/96824466" style="position:absolute; left:-9999px;"/></div>
+    </noscript>
+    <!-- /Yandex.Metrika counter -->
+
+    <div class="content">
     <div class="preloader">
         <svg id="Слой_1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
              viewBox="-2 0 262 256" xml:space="preserve">
@@ -671,6 +712,5 @@
         </div>
     </div>
 </div>
-    1
 </body>
 </html>
